# bunny_framework

./: .gitignore  BCP_SPECIFICATION.md  CMakeLists.txt  DEVELOPER_GUIDE.md  DOCUMENTACION_TESIS_ANEXOS.md  DOCUMENTACION_TESIS_PRINCIPAL.md  GLOSARIO.md  INCLUDES_GUIDE.md  NETWORK_OVERVIEW.md  PROCESS_ENGINE_CONNECTION_GUIDE.md  PROCESS_ENGINE_WEBSOCKET_GUIDE.md  README.md  SETUP_QUICK_START.md  bunny  bunny.bat  bunny.spec  sdkconfig  setup-bunny-env.ps1
components/bunny/: CMakeLists.txt  bunny_sdk.cpp  bunny_sdk.h  idf_component.yml
components/bunny/api/: event.c  sensor.c  state.h
components/bunny/builder/: command_builder.h  state_builder.h
components/bunny/capabilities/: command_capability.h  event_capability.cpp  event_capability.h  sensor_capability.cpp  sensor_capability.h  state_capability.cpp  state_capability.h
components/bunny/config/: config.c  config.h
components/bunny/core/: capability.h  core.h
components/bunny/include/: bunny.h  bunny_gpio.h  bunny_gpio_registry.h
components/bunny/metadata/: metadata.h
components/bunny/network/: discovery.c  discovery.h  network.c  network.h
components/bunny/platform/esp32/: bunny_gpio.cpp  platform_esp32.h
components/bunny/platform/mock/: platform_mock.h
components/bunny/protocol/: protocol.c  protocol.h
components/bunny/registry/: registry.h
components/bunny/runtime/: runtime.h
components/bunny/utils/: json_builder.h  utils.c  utils.h
components/display/: CMakeLists.txt  display.cpp  display.h  display_config.h
config/: device.json
demo_app/: CMakeLists.txt  INSTALL_QUICK_START.md  QUICK_START_WINDOWS.md  README.md  WINDOWS_COMMANDS_TEST.md  bunny.ps1  sdkconfig  setup-bunny-env.bat  setup-bunny-env.py  setup-bunny-env.sh
demo_app/components/bunny/: bunny.c  bunny_sdk.cpp  bunny_sdk.h
demo_app/components/bunny/api/: command.c  command.h  event.h  sensor.h  state.c
demo_app/components/bunny/builder/: event_builder.h  sensor_builder.h
demo_app/components/bunny/capabilities/: command_capability.cpp  command_capability.h  event_capability.cpp  event_capability.h  sensor_capability.h
demo_app/components/bunny/config/: config.c  config.h
demo_app/components/bunny/core/: capability.h  core.c
demo_app/components/bunny/include/: bunny.h  bunny_gpio.h
demo_app/components/bunny/metadata/: metadata.h
demo_app/components/bunny/network/: discovery.c  discovery.h  network.h  wifi.c  wifi.h
demo_app/components/bunny/platform/esp32/: platform_esp32.c
demo_app/components/bunny/platform/mock/: platform_mock.c
demo_app/components/bunny/protocol/: protocol.cpp
demo_app/components/bunny/registry/: registry.cpp
demo_app/components/bunny/runtime/: runtime.c
demo_app/components/bunny/types/: bunny_types.h
demo_app/components/bunny/utils/: json_builder.h
demo_app/components/display/: DESIGN_PATTERN.md  README.md  display.cpp
demo_app/config/: device.json
demo_app/doc/: BCP_SPECIFICATION.md  DOCUMENTACION_TESIS_ANEXOS.md  FRAMEWORK_VS_LIBRARY.md  HANDSHAKE_IMPLEMENTATION_GUIDE.md  INSTALL_COMMAND.md  MONITOR_COMMAND.md  MOTOR_INTEGRATION.md  MOTOR_WEBSOCKET_PERSISTENCE_BUG_REPORT.md  NETWORK_OVERVIEW.md  PROCESS_ENGINE_WEBSOCKET_GUIDE.md  SETUP_ENVIRONMENT.md  WINDOWS_SETUP.md
demo_app/libraries/: INDEX.md
demo_app/libraries/display_st7789/: CMakeLists.txt  EXAMPLES.md  display.h  idf_component.yml
demo_app/main/: CMakeLists.txt  bunny_framework.cpp
demo_app/main/commands/: display_command.h  fan_command.h  motores_command.cpp  motores_command.h
demo_app/main/events/: motion_event.h
demo_app/main/sensors/: temperature_sensor.cpp
demo_app/main/states/: display_state.h  fan_state.h
doc/: BCP_SPECIFICATION.md  BUNNY_PROGRAMMING_PHILOSOPHY.md  CAPABILITIES_EXPOSURE_GUIDE.md  COMPARISON.md  DEVELOPER_GUIDE.md  DOCUMENTACION_TESIS_DIAPOSITIVA_UNICA.md  FRAMEWORK_VS_LIBRARY.md  GLOSARIO.md  HEARTBEAT_IMPLEMENTATION_GUIDE.md  INCLUDES_GUIDE.md  MOTOR_CAPABILITIES_MANIFEST_BUG_REPORT.md  PROCESS_ENGINE_CONNECTION_GUIDE.md  PROCESS_ENGINE_WEBSOCKET_GUIDE.md  README.md
libraries/: GETTING_STARTED.md
libraries/display_st7789/: TESTING.md  display.cpp
main/: CMakeLists.txt  bunny_framework.c  bunny_framework.cpp
main/commands/: display_command.cpp  fan_command.cpp
main/events/: motion_event.cpp
main/sensors/: temperature_sensor.h
main/states/: display_state.cpp  fan_state.cpp
